[gd_scene load_steps=3 format=3 uid="uid://ymgvlhgm07pu"]

[ext_resource type="Script" uid="uid://coygay3krt0wq" path="res://scenes/scene_game_map.gd" id="1_geyab"]
[ext_resource type="PackedScene" uid="uid://tsfduc0p5n1q" path="res://components/player.tscn" id="2_wgdrq"]

[node name="SceneGameMap" type="Node"]
script = ExtResource("1_geyab")

[node name="Main3D" type="Node3D" parent="."]
unique_name_in_owner = true

[node name="Player" parent="Main3D" instance=ExtResource("2_wgdrq")]
transform = Transform3D(0.5, 0, 0, 0, 0.329, 0, 0, 0, 0.5, 0, 0.705031, 0)

[node name="HUD" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HUD"]
layout_mode = 2

[node name="Health" type="Label" parent="HUD/VBoxContainer"]
layout_mode = 2
text = "Health 100%"

[node name="Menu" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="CenterContainer" parent="Menu"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Menu/CenterContainer"]
layout_mode = 2

[node name="Resume" type="Button" parent="Menu/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Resume"

[node name="Options" type="Button" parent="Menu/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Options"

[node name="MainMenu" type="Button" parent="Menu/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Main Menu"

[node name="Quit" type="Button" parent="Menu/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Quit"

[connection signal="button_down" from="Menu/CenterContainer/VBoxContainer/Resume" to="." method="_on_resume_button_down"]
[connection signal="button_down" from="Menu/CenterContainer/VBoxContainer/Options" to="." method="_on_options_button_down"]
[connection signal="button_down" from="Menu/CenterContainer/VBoxContainer/MainMenu" to="." method="_on_main_menu_button_down"]
[connection signal="button_down" from="Menu/CenterContainer/VBoxContainer/Quit" to="." method="_on_quit_game_button_down"]
